--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,12 @@ html,body{
     height: 100%;
     width: 100%;
 }
+
+.main{
+    background-color: #0F0d0d;
+}
+
+.page1{
+    height: 100vh;
+    width: 100vh;
+}
