--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,10 @@ nav img{
     justify-content: center;
     gap: 24px;
 }
+
+nav .circle{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: purple transparent;
+}
