--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,14 @@ html,body{
 }
 
 .page1{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 
 nav{
     height:55px;
     width: 100%;
-    background-color: red !important;
+    /* background-color: red !important; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,12 +38,43 @@ nav img{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 20px;
 }
 
 .circle{
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: purple transparent;
+    background-color: #fff;
+}
+
+nav h4{
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+nav h4:nth-child(1){
+    border-bottom: 1.5px solid #fff;
+}
+
+.page1 h1{
+    font-size: 8vw;
+    font-weight: 300;
+    font-family: PP mori;
+    margin-top: 12vw;
+    margin-left: 6vw;
+}
+
+.page1 h2{
+    font-size: 8vw;
+    font-weight: 300;
+    font-family: PP mori;
+    margin-left: 26vw;
+}
+
+.page1 video{
+    width: 60%;
+    margin-top: 10vw;
+    margin:0 20%;
 }
