--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,57 @@ nav h4:nth-child(1){
 }
 
 .page2{
-    min-height: 150vh;
+    min-height: 130vh;
     width: 100%;
+    padding: 100px 5vw;
+    border-bottom: 2px solid #6c6c6c;
+}
+
+.page2 h1{
+    font-size: 7vw;
+    font-weight: 500;
+    font-family: PP mori;
+    color:#111;
+}
+
+.page2-container{
+    height: 60vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* padding: 0 5vw; */
+}
+
+.page2-left{
+    /* background-color: blue; */
+    width: 38%;
+}
+.page2-right{
+    /* background-color: blue; */
+    width: 24%;
+}
+
+.page2-left h2{
+    font-size: 4vw;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: #111;
+    line-height: 3vw;
+}
+
+
+.page2-right p{
+    font-size: 28px;
+    color: #111;
+}
+
+.page2-right button{
+    width: 100%;
+    border-radius: 50px;
+    border: none;
+    padding: 4px 0;
+    background-color: #EDBFFF;
+    color: #111;
+    margin-top: 20px;
 }
