--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html,body{
     background-color: #EDBFFF;
     z-index:8;
     mix-blend-mode: difference;
-    transition: left linear 0.1s top linear 0.1s;
+    transition: all linear 0.2s;
 }
 .main{
     background-color: #0F0d0d;
