--- a/styles.css
+++ b/styles.css
@@ -290,9 +290,14 @@ footer{
     color: #fff;
     border-top-left-radius: 125px;
     font-size: 13px;
-    padding: 100px 0 30px;
+    padding: 70px 0 30px;
     line-height: 20px;
     /* position: absolute; */
+}
+
+footer .logo{
+    height: 50px;
+    width: 50px;
 }
 
 .col{
@@ -385,7 +390,7 @@ hr{
     width: 90%;
     border: 0;
     border-top: 1px solid #ccc;
-    margin: 0px auto;
+    margin: 20px auto;
 }
 .copyright{
     width: 100%;
