--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html,body{
     width: 20px;
     border-radius: 50%;
     position: fixed;
-    background-color: #EDBFFF;
+    background-color: #15ff00;
     z-index:8;
     transition: background-image ease 0.5s;
     background-position: center;
@@ -160,7 +160,7 @@ nav h4:nth-child(1){
     color: #111;
 }
 
-.page2-right button{
+/* .page2-right button{
     width: 100%;
     border-radius: 50px;
     border: none;
@@ -168,6 +168,254 @@ nav h4:nth-child(1){
     background-color: #EDBFFF;
     color: #111;
     margin-top: 20px;
+} */
+
+.about-button {
+    position: relative;
+    padding: 13px 35px;
+    background: #2aff00;
+    font-size: 17px;
+    font-weight: 900;
+    color: #181818;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px #18181869, inset 2px 2px 10px #ffffffb0;
+    transition: all .3s ease-in-out;
+}
+
+.icon-1 {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 0px;
+    height: auto;
+    transition: all .5s ease-in-out;
+    z-index: -1;
+}
+
+.icon-2 {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 0px;
+    height: auto;
+    transition: all .5s ease-in-out;
+    z-index: -2;
+}
+
+.icon-3 {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 0px;
+    height: auto;
+    transition: all .5s ease-in-out;
+    z-index: -2;
+}
+
+.icon-4 {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 0px;
+    height: auto;
+    transition: all .5s ease-in-out;
+    z-index: -2;
+}
+
+.icon-5 {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 0px;
+    height: auto;
+    transition: all .5s ease-in-out;
+    z-index: -2;
+}
+
+.about-button:hover {
+    padding: 13px 25px;
+    border-radius: 8px 8px 24px 24px;
+}
+
+.about-button:hover .icon-1 {
+    top: -250%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 50px;
+    height: auto;
+    animation: inIcon1 1s ease .45s forwards;
+}
+
+@keyframes inIcon1 {
+    0% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+
+    25% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(5deg);
+    }
+
+    50% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(1deg);
+    }
+
+    65% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(3deg);
+    }
+
+    100% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+}
+
+.about-button:hover .icon-2 {
+    position: absolute;
+    top: -200%;
+    left: 90%;
+    transform: translate(-50%, 0);
+    width: 75px;
+    height: auto;
+    animation: inIcon2 1s ease .45s forwards;
+}
+
+@keyframes inIcon2 {
+    0% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+
+    35% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(10deg);
+    }
+
+    50% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(4deg);
+    }
+
+    80% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(5deg);
+    }
+
+    100% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+}
+
+.about-button:hover .icon-3 {
+    position: absolute;
+    top: -130%;
+    left: 20%;
+    transform: translate(-50%, 0);
+    width: 60px;
+    height: auto;
+    animation: inIcon3 1s ease .45s forwards;
+}
+
+@keyframes inIcon3 {
+    0% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+
+    35% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(-2deg);
+    }
+
+    100% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+}
+
+.about-button:hover .icon-4 {
+    position: absolute;
+    top: -300%;
+    left: 10%;
+    transform: translate(-50%, 0);
+    width: 85px;
+    height: auto;
+    animation: inIcon4 1s ease .45s forwards;
+}
+
+@keyframes inIcon4 {
+    0% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+
+    40% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(-3deg);
+    }
+
+    100% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+}
+
+.about-button:hover .icon-5 {
+    position: absolute;
+    top: -350%;
+    left: 90%;
+    transform: translate(-50%, 0);
+    width: 85px;
+    height: auto;
+    animation: inIcon5 1s ease .45s forwards;
+}
+
+@keyframes inIcon5 {
+    0% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+
+    35% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(-3deg);
+    }
+
+    100% {
+    transform-origin: 0 100%;
+    transform: translate(-50%, 0) rotate(0deg);
+    }
+}
+
+.fil-leaf-1 {
+    fill: #00ff26
+}
+
+.fil-leaf-2 {
+    fill: #37ff00;
+    fill-rule: nonzero
+}
+
+.fil-leaf-3 {
+    fill: #22e000
+}
+
+.fil-leaf-4 {
+    fill: #14ec00
+}
+
+.fil-leaf-5 {
+    fill: #39f809
 }
 
 .page3{
@@ -441,6 +689,11 @@ form button svg {
     background-color: #fff;
     margin-right: 15px;
     cursor: pointer;
+    transition: all 0.5s;
+}
+.social .fab:hover{
+    color: #15ff00;
+    transform: scale(1.09);
 }
 
 hr{
@@ -511,5 +764,10 @@ hr{
 .col h2:hover{
     color: greenyellow;
     text-decoration: underline;
-    letter-spacing: 2;
+    transform: scale(1.09);
 }
+
+.states{
+    color: #EDBFFF;
+}
+
