--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,13 @@ nav img{
     gap: 20px;
 }
 
+
+#nav2 a{
+    text-decoration: none;
+    color: #fff;
+}
+
+
 .circle{
     height: 20px;
     width: 20px;
